blog-specific/ip6tables-save
# Generated by ip6tables-save v1.4.14 on Fri Aug 22 00:43:42 2014
*filter
:INPUT ACCEPT [4:408]
:FORWARD ACCEPT [8420:7047146]
:OUTPUT ACCEPT [5:354]
-A FORWARD -p tcp -m tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
# Google
-A FORWARD -p tcp -d 2001:4860::/32 -m multiport --dports 80,443 -j REJECT --reject-with port-unreach
-A FORWARD -p tcp -d 2404:6800::/32 -m multiport --dports 80,443 -j REJECT --reject-with port-unreach
-A FORWARD -p tcp -d 2607:F8B0::/32 -m multiport --dports 80,443 -j REJECT --reject-with port-unreach
# Facebook
-A FORWARD -p tcp -d 2620:0:1C00::/40 -m multiport --dports 80,443 -j REJECT --reject-with port-unreach
-A FORWARD -p tcp -d 2A03:2880::/32 -m multiport --dports 80,443 -j REJECT --reject-with port-unreach
## Wikipedia
#-A FORWARD -p tcp -d 2620:0:860::/46 -m multiport --dports 80,443 -j REJECT --reject-with port-unreach
-A FORWARD -p tcp -m tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
COMMIT
# Completed on Fri Aug 22 00:43:42 2014
# Generated by ip6tables-save v1.4.14 on Fri Aug 22 00:43:42 2014
*mangle
:PREROUTING ACCEPT [8424:7047554]
:INPUT ACCEPT [4:408]
:FORWARD ACCEPT [8420:7047146]
:OUTPUT ACCEPT [5:354]
:POSTROUTING ACCEPT [8425:7047500]
-A PREROUTING -j CONNMARK --restore-mark --nfmask 0xffffffff --ctmask 0xffffffff
-A PREROUTING -m mark ! --mark 0x0 -j ACCEPT
-A PREROUTING -d 2001:da8:d800:f001:202:141:160:95/128 -i eth0 -j MARK --set-mark 95
-A PREROUTING -d fdfe:dcba:9876::10:2/128 -i do -p tcp -m tcp --dport 80 -j MARK --set-xmark 0x4aa/0xffffffff
-A PREROUTING -d fdfe:dcba:9876::10:2/128 -i do -p tcp -m tcp --dport 443 -j MARK --set-xmark 0x4aa/0xffffffff
-A PREROUTING -d fdfe:dcba:9876::9:2/128 -i yfgao-do -p tcp -m tcp --dport 80 -j MARK --set-xmark 0x4ab/0xffffffff
-A PREROUTING -d fdfe:dcba:9876::9:2/128 -i yfgao-do -p tcp -m tcp --dport 443 -j MARK --set-xmark 0x4ab/0xffffffff
# too many ports in one line
-A PREROUTING -p tcp -m mark --mark 0x0 -m multiport --dports 20,21,22,23,25,53,80,110,143,443,465,873,993,995,3389 -j MARK --set-xmark 0x1f90/0xffffffff
-A PREROUTING -p tcp -m mark --mark 0x0 -m multiport --dports 5228 -j MARK --set-xmark 0x1f90/0xffffffff
-A PREROUTING -p udp -m mark --mark 0x0 -m multiport --dports 53 -j MARK --set-xmark 0x1f90/0xffffffff
-A PREROUTING -p icmpv6 -m mark --mark 0x0 -j MARK --set-xmark 0x1f90/0xffffffff
-A PREROUTING -m mark --mark 0x0 -j MARK --set-xmark 0x2382/0xffffffff
-A PREROUTING -j CONNMARK --save-mark --nfmask 0xffffffff --ctmask 0xffffffff
-A OUTPUT -p icmpv6 -j ACCEPT
-A OUTPUT -j CONNMARK --restore-mark --nfmask 0xffffffff --ctmask 0xffffffff
-A OUTPUT -m mark --mark 0x0 -j MARK --set-mark 0xdead
-A OUTPUT -j CONNMARK --save-mark
COMMIT
# Completed on Fri Aug 22 00:43:42 2014
