blog-specific/iptables-save
# Generated by iptables-save v1.4.14 on Tue Aug 26 20:44:01 2014
*nat
:PREROUTING ACCEPT [1:129]
:INPUT ACCEPT [1:129]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A PREROUTING -d 202.38.64.59/32 -p tcp -m tcp -m multiport --dports 80,443 -j DNAT --to-destination 202.141.160.95
-A PREROUTING -d 202.38.64.0/24 -p udp -m udp --dport 53 -j DNAT --to-destination 202.141.160.95
-A PREROUTING -d 192.168.0.0/16 -p udp -m udp --dport 53 -j DNAT --to-destination 202.141.160.95
-A PREROUTING -d 172.16.0.0/12 -p udp -m udp --dport 53 -j DNAT --to-destination 202.141.160.95
-A PREROUTING -d 127.0.0.0/8 -p udp -m udp --dport 53 -j DNAT --to-destination 202.141.160.95
-A OUTPUT -d 202.38.64.59/32 -p tcp -m tcp -m multiport --dports 80,443 -j DNAT --to-destination 202.141.160.95
-A POSTROUTING -s 10.11.0.0/16 ! -d 10.11.0.0/16 -j MASQUERADE
-A POSTROUTING -s 10.10.0.0/16 ! -d 10.10.0.0/16 -j MASQUERADE
-A POSTROUTING -s 10.9.0.0/16 ! -d 10.9.0.0/16 -j MASQUERADE
-A POSTROUTING -s 10.8.0.0/16 ! -d 10.8.0.0/16 -j MASQUERADE
-A POSTROUTING -s 10.7.0.0/16 ! -d 10.7.0.0/16 -j MASQUERADE
-A POSTROUTING -s 10.6.0.0/16 ! -d 10.6.0.0/16 -j MASQUERADE
-A POSTROUTING -s 10.5.0.0/16 ! -d 10.5.0.0/16 -j MASQUERADE
-A POSTROUTING -s 10.4.0.0/16 ! -d 10.4.0.0/16 -j MASQUERADE
# 5300 = 0x14b4
-A POSTROUTING -m mark --mark 0x14b0/0xfff0 -j MASQUERADE
COMMIT
# Completed on Tue Aug 26 20:44:01 2014
# Generated by iptables-save v1.4.14 on Tue Aug 26 20:44:01 2014
*mangle
:PREROUTING ACCEPT [650865431:380340767237]
:INPUT ACCEPT [451164891:270363687905]
:FORWARD ACCEPT [510122058:461054761212]
:OUTPUT ACCEPT [528194277:533930911952]
:POSTROUTING ACCEPT [1061513569:995914874237]
-N vpn_fwd_load_balance
-A vpn_fwd_load_balance -m statistic --mode nth --every 5 --packet 0 -j MARK --set-mark 8002
-A vpn_fwd_load_balance -m statistic --mode nth --every 5 --packet 1 -j MARK --set-mark 8007
-A vpn_fwd_load_balance -m statistic --mode nth --every 5 --packet 2 -j MARK --set-mark 8007
-A vpn_fwd_load_balance -m statistic --mode nth --every 5 --packet 3 -j MARK --set-mark 8002
-A vpn_fwd_load_balance -m statistic --mode nth --every 5 --packet 4 -j MARK --set-mark 8007
-N vpn_local_load_balance
-A vpn_local_load_balance -m statistic --mode nth --every 2 --packet 0 -j MARK --set-mark 5302
-A vpn_local_load_balance -m statistic --mode nth --every 2 --packet 1 -j MARK --set-mark 5307
-A PREROUTING -j CONNMARK --restore-mark --nfmask 0xffffffff --ctmask 0xffffffff
-A PREROUTING -m mark ! --mark 0x0 -j ACCEPT
-A PREROUTING -d 202.141.160.95/32 -i eth0 -j MARK --set-xmark 0xa0/0xffffffff
-A PREROUTING -d 202.141.176.95/32 -i eth1 -j MARK --set-xmark 0xb0/0xffffffff
-A PREROUTING -d 10.0.2.2/32 -i do2 -p udp -m udp --dport 1194 -j MARK --set-xmark 0x4aa/0xffffffff
-A PREROUTING -d 10.0.2.2/32 -i do2 -p tcp -m tcp --dport 1194 -j MARK --set-xmark 0x4aa/0xffffffff
-A PREROUTING -d 10.0.2.2/32 -i do2 -p tcp -m tcp --dport 80 -j MARK --set-xmark 0x4aa/0xffffffff
-A PREROUTING -d 10.0.2.2/32 -i do2 -p tcp -m tcp --dport 443 -j MARK --set-xmark 0x4aa/0xffffffff
-A PREROUTING -p tcp -m mark --mark 0x0 -m multiport --dports 22,23,53,80,443,110,143,993,995 -j vpn_fwd_load_balance
-A PREROUTING -p udp -m mark --mark 0x0 -m multiport --dports 53 -j vpn_fwd_load_balance
-A PREROUTING -p icmp -m mark --mark 0x0 -j vpn_fwd_load_balance
-A PREROUTING -m mark --mark 0x0 -j MARK --set-xmark 0x2382/0xffffffff
-A PREROUTING -j CONNMARK --save-mark --nfmask 0xffffffff --ctmask 0xffffffff
-A OUTPUT -j CONNMARK --restore-mark --nfmask 0xffffffff --ctmask 0xffffffff
-A OUTPUT -m mark ! --mark 0x0 -j ACCEPT
-A OUTPUT -p tcp -m mark --mark 0x0 -m multiport --dports 25,80,443 -j vpn_local_load_balance
-A OUTPUT -p udp -m mark --mark 0x0 --dport 53 -j vpn_local_load_balance
-A OUTPUT -j CONNMARK --save-mark
COMMIT
# Completed on Tue Aug 26 20:44:01 2014
# Generated by iptables-save v1.4.14 on Tue Aug 26 20:44:01 2014
*filter
:INPUT ACCEPT [2445739:1123620702]
:FORWARD ACCEPT [3753857:2855668257]
:OUTPUT ACCEPT [2764493:2493171056]
:fail2ban-ssh - [0:0]
-A INPUT -p tcp -m multiport --dports 22 -j fail2ban-ssh
-A FORWARD -s 10.5.0.0/16 -p tcp -m tcp --tcp-flags SYN,RST SYN -j TCPMSS --set-mss 1334
-A FORWARD -p tcp -m tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A FORWARD -p tcp --dport 25 -j REJECT --reject-with icmp-port-unreachable
-A fail2ban-ssh -j RETURN
COMMIT
# Completed on Tue Aug 26 20:44:01 2014
